--- a/header.tex
+++ b/header.tex
@@ -1,10 +1,16 @@
 \usepackage{ngerman}
 \usepackage[utf8]{inputenc}
 
+\usepackage[T1]{fontenc}
+
 \usepackage{blindtext}
 \usepackage{fancyhdr} %Fuer Kopf und Fusszeilen
 \usepackage{anysize} %Damit man Raender leicht einstellen kann
 \usepackage{titlesec}
+
+\usepackage{tabularx}
+\usepackage{rotating}
+\usepackage{hhline}
 
 \usepackage{floatrow}
 %\usepackage[sc,center]{titlesec} %Um Kapitelnamen-Schrift zu veraendern
