--- a/literature.bib
+++ b/literature.bib
@@ -50,6 +50,14 @@
       url = "{ftp://medical.nema.org/medical/dicom/2011/11_03pu.pdf}"
   }
  
+  @misc{dicom:structure,
+       author = "{National Electrical Manufacturers Association}",
+       publisher = "{National Electrical Manufacturers Association}",
+       title = "Digital Imaging and Communications in Medicine (DICOM) - Part 5: Data Structures and Encoding",
+       year = "2011",
+       url = "{ftp://medical.nema.org/medical/dicom/2011/11_03pu.pdf}"
+   }
+ 
   @misc{dicom:dd,
        author = "{National Electrical Manufacturers Association}",
        publisher = "{National Electrical Manufacturers Association}",
