--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -68,5 +68,8 @@
 
 %\addcontentsline{toc}{section}{Abbildungsverzeichnis}
 \listoffigures
+\listoftables
 
+\appendix
+\include{appendix}
 \end{document}
