--- a/literature.bib
+++ b/literature.bib
@@ -66,6 +66,15 @@
        url = "{ftp://medical.nema.org/medical/dicom/2011/11_06pu.pdf}"
    }
  
+ 
+ 
+ @BOOK{radio:hounsfield,
+    AUTHOR       = "Bücheler, Egon and Lackner, Klaus-Jürgen and Thelen, Manfred",
+    TITLE        = "Einführung in die Radiologie: Diagnostik und Interventionen",
+    PUBLISHER    = "Georg Thieme Verlag",
+    YEAR         = "1998",
+  }
+ 
  @BOOK{pianykh:dicom,
    AUTHOR       = "Pianykh, Oleg S.",
    TITLE        = "{D}igital {I}maging and {C}ommunications in {M}edicine {(DICOM)}",
@@ -73,3 +82,9 @@
    YEAR         = "2008",
  }
  
+ @BOOK{handels:mbv,
+ 	AUTHOR       = "Handels, Heinz",
+ 	TITLE        = "Medizinische Bildverarbeitung",
+ 	PUBLISHER    = "B.G. Teubner Stuttgart Leipzig",
+ 	YEAR         = "2000",
+ }
