--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{report}
+\documentclass[12pt, a4paper]{scrreprt}
 
 \input{header}
 \begin{document}
@@ -48,6 +48,8 @@
 
 
 \include{einleitung}
+
+\include{anforderungen}
 
 \include{grundlagenMbv}
 
